manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gettask
spec: 
  replicas: 2
  selector:
    matchLabels:
      apps: gettask
  template:
    metadata:
      labels:
        apps: gettask
    spec:
      containers:
        - name: getask
          image: appsacrrrrrr.azurecr.io/appsgettask:v1
          ports:
            - containerPort: 8000
