manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gettask-svc
spec:
  type: LoadBalancer
  selector: 
     apps: gettask
  ports:
    - port: 80
      targetPort: 8000
